Changed the script names!

--- a/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
@@ -12,16 +12,16 @@
 <p>	
 	<ul> 
 		<li>
-			<p>Rename the, <em>dada/<strong>install-disabled</strong></em> directory to, <em>dada/<strong>install</strong></em></p> 
+			<p>Rename the, <em>dada/<strong>installer-disabled</strong></em> directory to, <em>dada/<strong>installer</strong></em></p> 
 		</li>
 		<li>
 			<p>
-				Change the permissions of the <em>dada/install/<strong>installer.cgi</strong></em> script to, <strong>755</strong>
+				Change the permissions of the <em>dada/installer/<strong>install.cgi</strong></em> script to, <strong>755</strong>
 			</p>
 		</li> 
 		<li>
 			<p>
-				Visit the, <em>dada/install/<strong>installer.cgi</strong></em> script in your web browser (try clicking <a href="./install/installer.cgi">HERE</a>) and follow the instructions. 
+				Visit the, <em>dada/installer/<strong>install.cgi</strong></em> script in your web browser (try clicking <a href="./installer/install.cgi">HERE</a>) and follow the instructions. 
 			</p>
 		</li> 
 		
