Changed the installer to allow you to skip the SQL setup, if there's already tables we can ue in there,
as well as the entire configuration, if you already have a dada files setup, 

That basically means you can upgrade with the installer. Yeah!

--- a/dada/installer-disabled/templates/installer_extra_javascript.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript.tmpl
@@ -5,8 +5,19 @@
 	
 	
 	 //<![CDATA[
-	
-	
+		function ToggleConfigurationOptions(){ 
+			var togglin = document.getElementById( 'configuration' );
+			
+			if($F('skip_configure_dada_files') == 1){ // that means, dissapear stuff!
+					if(togglin.style.display == ""){	
+						Effect.Fade('configuration');
+					}
+			}
+			else { 			
+				Effect.Appear('configuration');
+			}
+		}
+		
 		function ToggleSQLOptions() { 
 			
 			var sql_picker = document.getElementById('backend');
@@ -93,6 +104,7 @@
 		function setStuffUp() { 
 			ToggleSQLOptions(); 
 			Toggle_dada_files_dirOptions();
+			ToggleConfigurationOptions(); 
 		}
 		
 		
