--- a/dada/installer-disabled/templates/installer_scrn_configure_dada_mail.tmpl
+++ b/dada/installer-disabled/templates/installer_scrn_configure_dada_mail.tmpl
@@ -55,6 +55,97 @@
 
 
 
+	<fieldset> 
+
+
+	<legend>
+		&quot;<!-- tmpl_var Dada_Files_Dir_Name -->	&quot; Directory Location [<a href="#" onclick="toggleDisplay('dada_files_help');return false;">?</a>]
+	</legend>
+	<!-- tmpl_if error_create_dada_files_dir  --> 
+		<ul> 
+		<li>
+		<p class="error"> 
+		 Will not be able to create, <em><strong><!-- tmpl_var install_dada_files_dir_at --></strong>/<!-- tmpl_var Dada_Files_Dir_Name --></em>
+		</p>
+		</li>
+		</ul>
+
+	<!-- /tmpl_if --> 
+	<!-- tmpl_if error_dada_files_dir_exists  --> 
+		<ul> 
+		<li>
+		<p class="error"> 
+			The directory, <em><strong><!-- tmpl_var dada_files_loc --></strong>/<!-- tmpl_var Dada_Files_Dir_Name --></em> already exists.
+		</p>
+		</li>
+		<!-- tmpl_if test_complete_dada_files_dir_structure_exists --> 
+			<li>
+				<p>
+				<input type="checkbox" name="skip_configure_dada_files"	id="skip_configure_dada_files" value="1" onClick="ToggleConfigurationOptions();" /> 
+				<label for="skip_configure_dada_files">I know that this,  &quot;<!-- tmpl_var Dada_Files_Dir_Name -->&quot; already exists</label> <br /> 
+				<ul> 
+					<li>
+						<p>Use the existing directory structure and configuration file, ignoring the configuration below. 
+						</p></li>
+						<li><p>I understand no checks are done to make sure that the current  setup is correct!)</p></li> 
+			</li>
+		<!-- /tmpl_if --> 
+		
+		</ul> 
+
+		
+	<!-- /tmpl_if -->
+	
+
+
+	<div id="dada_files_help" style="display:none"> 
+
+	<p class="positive">	
+		<!-- tmpl_var PROGRAM_NAME --> will need to write various files and will need a directory for which to do this in. You'll 
+		have to tell Dada Mail where you'd like this directory to live. The directory will be called, <em><!-- tmpl_var Dada_Files_Dir_Name --></em>. 
+		</p>
+		<p class="positive">
+		Usually, this directory will live under your home directory and <!-- tmpl_var PROGRAM_NAME --> can usually guess where that is, but if it guesses wrong
+		or it cannot create the, <em><!-- tmpl_var Dada_Files_Dir_Name --></em> directory in your home directory, you may need to set an alternative directory. 
+	</p> 
+	</div> 
+
+
+
+
+	<p>
+	 <input type="radio" checked="checked" id="dada_files_dir_setup_auto"  name="dada_files_dir_setup" value="auto" onChange="Toggle_dada_files_dirOptions(); return false;">
+		<label for="dada_files_dir_setup_auto">AUTO 
+		Use <!-- tmpl_var PROGRAM_NAME -->'s best guess.  </label>(<em> <!-- tmpl_var home_dir_guess --></em>). 
+	</p> 
+
+	 <p>
+	  <input type="radio"  id="dada_files_dir_setup_manual" name="dada_files_dir_setup" value="manual" onChange="Toggle_dada_files_dirOptions(); return false;">
+	<label for="dada_files_dir_setup_manual"> 
+	 MANUAL.
+	</label>  Explicitly set the Absolute Path to where the <em>.dada_files</em> directory should be installed:</p>
+
+	<div id="manual_dada_files_dir_setup">
+	<fieldset> 
+	<legend> 
+		Manual Configuration of, <em>.dada_files</em> directory
+	</legend> 
+	<p> 
+	 <input type="text" name="dada_files_loc" value="<!-- tmpl_var home_dir_guess -->" style="width:80%" />/<em><!-- tmpl_var Dada_Files_Dir_Name --></em>
+	</p> 
+
+	</fieldset>
+
+	</div> 
+
+	</fieldset>
+
+<div id="configuration"> 
+	
+
+<fieldset> 
+	<legend>Configuration</legend> 
+	
 <fieldset> 
 
 <legend>
@@ -133,76 +224,7 @@ access <em>any</em> mailing list.</p>
 <hr /> 
 </fieldset> 
 
-<fieldset> 
 
-
-<legend>
-	.dada_config Directory Location [<a href="#" onclick="toggleDisplay('dada_files_help');return false;">?</a>]
-</legend>
-<!-- tmpl_if error_create_dada_files_dir  --> 
-	<ul> 
-	<li>
-	<p class="error"> 
-	 Will not be able to create, <em><strong><!-- tmpl_var install_dada_files_dir_at --></strong>/<!-- tmpl_var Dada_Files_Dir_Name --></em>
-	</p>
-	</li>
-	</ul>
-	
-<!-- /tmpl_if --> 
-<!-- tmpl_if error_dada_files_dir_exists  --> 
-	<ul> 
-	<li>
-	<p class="error"> 
-		The directory, <em><strong><!-- tmpl_var dada_files_loc --></strong>/<!-- tmpl_var Dada_Files_Dir_Name --></em> already exists - we won't try to overwrite it.
-	</p>
-	</li>
-	</ul> 
-	
-<!-- /tmpl_if -->
-
-
-
-<div id="dada_files_help" style="display:none"> 
- 
-<p class="positive">	
-	<!-- tmpl_var PROGRAM_NAME --> will need to write various files and will need a directory for which to do this in. You'll 
-	have to tell Dada Mail where you'd like this directory to live. The directory will be called, <em><!-- tmpl_var Dada_Files_Dir_Name --></em>. 
-	</p>
-	<p>
-	Usually, this directory will live under your home directory and <!-- tmpl_var PROGRAM_NAME --> can usually guess where that is, but if it guesses wrong
-	or it cannot create the, <em><!-- tmpl_var Dada_Files_Dir_Name --></em> directory in your home directory, you may set an alternative directory. 
-</p> 
-</div> 
-
-
-
-
-<p>
- <input type="radio" checked="checked" id="dada_files_dir_setup_auto"  name="dada_files_dir_setup" value="auto" onChange="Toggle_dada_files_dirOptions(); return false;">
-	<label for="dada_files_dir_setup_auto">AUTO 
-	Use <!-- tmpl_var PROGRAM_NAME -->'s best guess.  </label>(<em> <!-- tmpl_var home_dir_guess --></em>). 
-</p> 
-
- <p>
-  <input type="radio"  id="dada_files_dir_setup_manual" name="dada_files_dir_setup" value="manual" onChange="Toggle_dada_files_dirOptions(); return false;">
-<label for="dada_files_dir_setup_manual"> 
- MANUAL.
-</label>  Explicitly set the Absolute Path to where the <em>.dada_files</em> directory should be installed:</p>
-
-<div id="manual_dada_files_dir_setup">
-<fieldset> 
-<legend> 
-	Manual Configuration of, <em>.dada_files</em> directory
-</legend> 
-<p> 
- <input type="text" name="dada_files_loc" value="<!-- tmpl_var home_dir_guess -->" style="width:80%" />/<em><!-- tmpl_var Dada_Files_Dir_Name --></em>
-</p> 
-
-</fieldset>
-
-</div> 
-
-</fieldset> 
 
 <fieldset> 
 
@@ -227,10 +249,10 @@ access <em>any</em> mailing list.</p>
 </p> 
 <p class="positive">	
 	The <strong>Default</strong> backend should be available for almost any server setup, but doesn't allow you to use some of the more 
-	advanced features of Dada Mail. </p> 
+	advanced features of <!-- tmpl_var PROGRAM_NAME -->. </p> 
 	<p class="positive">	
 Both the <strong>MySQ</strong>L and <strong>PostgreSQL</strong> backends allow you to use these advanced features and just require you to fill in the database details.
-If using either the SQL backends, make sure to create a new database before configuring Dada Mail and plug the SQL information below. 
+If using either the SQL backends, make sure to create a new database before configuring <!-- tmpl_var PROGRAM_NAME --> and plug the SQL information below. <!-- tmpl_var PROGRAM_NAME --> will create the necessary tables. 
 </p> 
 	
 </div>
@@ -252,9 +274,14 @@ If using either the SQL backends, make sure to create a new database before conf
 		<ul> 
 		<li> 
 		<p class="error">
-			The SQL information below is corret, but there are tables that already 
-			exist in the database. 
+			The SQL information below is correct, but there are tables in this database
+			that correspond to the tables that Dada Mail requires.
 		</p>
+		<p>
+			<input type="checkbox" name="skip_configure_SQL" id="skip_configure_SQL" value="1" /><label>I know these tables already exists. </label><br />
+			Use these existing tables, instead of making new ones.
+		</p> 
+		
 		</li>
 		</ul> 
 	<!-- /tmpl_if --> 
@@ -275,6 +302,12 @@ If using either the SQL backends, make sure to create a new database before conf
 	
 <!-- /tmpl_if --> 
 </fieldset> 
+
+</fieldset> 
+</div> 
+
+
+
 
 <input type="hidden" name="f" value="check" /> 
 
