--- a/dada/DADA/Template/templates/error_install_dir_still_around_screen.tmpl
+++ b/dada/DADA/Template/templates/error_install_dir_still_around_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin error_install_dir_still_around_screen.tmpl -->
 
-The, <em>dada/<strong>install</strong></em> directory needs to be removed (preferably) or renamed, before you 
+The, <em>dada/<strong>installer</strong></em> directory needs to be removed (preferably) or renamed, before you 
 can utilize Dada Mail. 
 
 <!-- end error_install_dir_still_around_screen.tmpl -->
