--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -1,3 +1,4 @@
+<!-- begin installer_install_dada_mail_scrn.tmpl --> 
 
 <fieldset> 
 <legend>
@@ -98,4 +99,6 @@
 <!-- /tmpl_if -->
 
 
-<!-- tmpl_include install_debug_info.tmpl --> 
+<!-- tmpl_include install_debug_info_widget.tmpl --> 
+
+<!-- end installer_install_dada_mail_scrn.tmpl --> 
