--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,3 +1,5 @@
+<!-- begin installer_extra_javascript_widget.tmpl --> 
+
  <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/dada_mail_admin_js.js" type="text/javascript"></script>
   <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
   <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/scriptaculous.js?load=effects" type="text/javascript"></script>
@@ -116,3 +118,5 @@
 	//]]>
     
 	</script>
+	
+<!-- end installer_extra_javascript_widget.tmpl -->
