These changes make the command line interface work a little more smoother.

--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -82,7 +82,7 @@
 						{ 
 						    method: 'post', 
 							parameters: {
-								f:                         'move_installer_dir'
+								f:                         'move_installer_dir_ajax'
 
 								},
 						onCreate: 	 function() {
