spelin' mis-takes!

--- a/dada/installer-disabled/templates/cl_help_scrn.tmpl
+++ b/dada/installer-disabled/templates/cl_help_scrn.tmpl
@@ -38,7 +38,7 @@ REQUIRED PARAMETERS:
 		Uses a PostgreSQL database
 		
 If you set, --backend to either, "mysql", or, "Pg" you will also have to pass
-the following paramaters: 
+the following parameters: 
 
 	--sql_server
 		SQL server
@@ -90,7 +90,7 @@ OTHER PARAMETERS
 	
 		./install.cgi | less 
 		
-	(or something similar) so that the script doesm't zoom to the end.
+	(or something similar) so that the script doesn't zoom to the end.
 		
 			
 		
