Futzin' with the docs.

--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin setup_info_screen.tmpl -->
 
-<h1>Advanced Installation with Outside Configuration File</h1> 
+<h1>Outside Configuration File</h1> 
 
 
 <h2>$PROGRAM_CONFIG_FILE_DIR</h2> 
