More doc edits. I do not play around.

--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -39,7 +39,7 @@
 
 <!-- /tmpl_if --> 
 
- <h2>Important!</h2> 
+ <h2>Rename/Remove the, "installer" Directory!</h2> 
 
 <p>
 	Rename/Remove the, <em>dada/<strong>installer</strong></em> directory! <!-- tmpl_var PROGRAM_NAME --> will not be enabled 
@@ -59,7 +59,7 @@
 
 
 
-<h2>Additional Configuration?</h2> 
+<h1>Additional Configuration?</h1> 
 
 <p>If you want to perform any additional configuration, your outside config file is located at, </p> 
 
@@ -75,7 +75,7 @@
 <!-- tmpl_if status --> 
 
 
-<h1>Ready?</h1> 
+<h1>Ready To Use <!-- tmpl_var PROGRAM_NAME -->?</h1> 
 
 
 <form action="<!-- tmpl_var submitted_PROGRAM_URL -->"> 
@@ -86,7 +86,7 @@
 
 
 <!-- tmpl_else --> 
-	<h1>BIG PROBLEMS</h1> 
+	<h1>Problems Have Occurred:</h1> 
 	
 	<p>Problems with the installation - look in the Installation Log for clues.</p> 
 	<p>
