--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -85,5 +85,21 @@
 </div>
 
 
+<h1>Raw Config Variables</h1> 
 
+<p>All configuration variables are below, in their raw form. You may use this to double-check the variables you 
+	are setting are being evaluated correctly: </p> 
+	
+
+<div style="width:95%;height:300px;overflow:auto;border:1px solid black;padding:5px;margin:5px">
+
+<table border="0" cellpadding="5"> 
+	<!-- tmpl_loop CONFIG_vals --> 
+	<tr> 
+		<td width="150px"><p><!-- tmpl_var name --></p></td> 
+		<td><p><pre><!-- tmpl_var value escape="HTML" --></pre></p></td> 
+	</tr>
+	<!-- /tmpl_loop -->
+</table> 
+</div> 
 <!-- end setup_info_screen.tmpl -->
