--- a/dada/DADA/Template/templates/view_archive_index_screen.tmpl
+++ b/dada/DADA/Template/templates/view_archive_index_screen.tmpl
@@ -120,7 +120,7 @@
 	   <input type="hidden" name="f" value="purge_all_archives" />
 	    <div class="buttonfloat">
 	    
-	   <input type="submit" class="alertive" value="Purge All Archive Messages" />
+	   <input type="submit" class="alertive" value="Purge All Archive Messages" onclick="return removeAllArchives(this.form);" />
 	   
 	 </div>
 	 <div class="floatclear"></div>
